Wrapping fix for should look like this

--- a/src/app/components/reference-output/reference-output.component.css
+++ b/src/app/components/reference-output/reference-output.component.css
@@ -1,3 +1,6 @@
 .ref-output {
     min-height: 75px;
 }
+.overflow-wrap {
+  overflow-wrap: anywhere;
+}
